--- a/Industries-we-serve.html
+++ b/Industries-we-serve.html
@@ -81,7 +81,7 @@
                     </div>
                     <div class="industry-categories">
                         <div class="row">
-                            <div class="col-lg-3 col-md-6">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                                 <div class="industry-categories-wrapper">
                                     <div class="industry-categories-img">
                                         <img src="images/img/real-estate.avif" alt="categories">
@@ -97,7 +97,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                                 <div class="industry-categories-wrapper">
                                     <div class="industry-categories-img">
                                         <img src="images/img/Plumbing.avif" alt="categories">
@@ -114,7 +114,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                                 <div class="industry-categories-wrapper">
                                     <div class="industry-categories-img">
                                         <img src="images/img/Auto-Repair.jpg" alt="categories">
@@ -130,7 +130,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                                 <div class="industry-categories-wrapper">
                                     <div class="industry-categories-img">
                                         <img src="images/img/Dental-Medical.avif" alt="categories">
@@ -147,7 +147,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                                 <div class="industry-categories-wrapper">
                                     <div class="industry-categories-img">
                                         <img src="images/img/Salons-Spas.jpg" alt="categories">
@@ -164,7 +164,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                                 <div class="industry-categories-wrapper">
                                     <div class="industry-categories-img">
                                         <img src="images/img/Cleaning-Services.jpg" alt="categories">
@@ -181,7 +181,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                                 <div class="industry-categories-wrapper">
                                     <div class="industry-categories-img">
                                         <img src="images/img/Home-Renovation.avif" alt="categories">
@@ -199,7 +199,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                                 <div class="industry-categories-wrapper">
                                     <div class="industry-categories-img">
                                         <img src="images/img/Pet-Services.jpg" alt="categories">
@@ -217,7 +217,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                                 <div class="industry-categories-wrapper">
                                     <div class="industry-categories-img">
                                         <img src="images/img/Fitness-Wellness.jpg" alt="categories">
@@ -235,7 +235,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                                 <div class="industry-categories-wrapper">
                                     <div class="industry-categories-img">
                                         <img src="images/img/Financial-Services.jpg" alt="categories">
@@ -252,7 +252,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                                 <div class="industry-categories-wrapper">
                                     <div class="industry-categories-img">
                                         <img src="images/img/Insurance.avif" alt="categories">
