--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="css/animate.css">
   <!-- Custome CSS -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-new.css">
 </head>
 
 <body>
