--- a/affiliate-program.html
+++ b/affiliate-program.html
@@ -69,15 +69,97 @@
     </section>
     <!-- inner banner section -->
 
-    <!--  -->
-    <section class="reseller-affiliate py-5">
+
+
+    <section class="affiliate-partners py-5">
       <div class="container">
-        <div class="sec-heading">
-          <h3>Become a Reseller or Affiliate Partner</h3>
+        <div class="affilirsinner">
+          <h5>Become a Reseller or Affiliate Partner</h5>
           <p>Earn recurring income by helping local businesses get results. Whether you’re a marketing professional,
             sales rep, or networking pro—we’ve got the tools you need.
           </p>
         </div>
+        <div class="cards-affiliate">
+          <div class="checkbox-title">
+            <div class="checkbox">
+              <label class="container">
+                <input type="checkbox">
+                <span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="image-outer">
+              <img src="images/img/Adidas-copy.svg" alt="">
+            </div>
+            <p class="bottom-title">Adidas</p>
+          </div>
+          <div class="checkbox-title">
+            <div class="checkbox">
+              <label class="container">
+                <input type="checkbox">
+                <span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="image-outer">
+              <img src="images/img/StockX.svg" alt="">
+            </div>
+            <p class="bottom-title">StockX</p>
+          </div>
+          <div class="checkbox-title">
+            <div class="checkbox">
+              <label class="container">
+                <input type="checkbox">
+                <span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="image-outer">
+              <img src="images/img/Lenovo.svg" alt="">
+            </div>
+            <p class="bottom-title">Lenovo</p>
+          </div>
+          <div class="checkbox-title">
+            <div class="checkbox">
+              <label class="container">
+                <input type="checkbox">
+                <span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="image-outer">
+              <img src="images/img/Fanatics.svg" alt="">
+            </div>
+            <p class="bottom-title">Fanatics</p>
+          </div>
+          <div class="checkbox-title">
+            <div class="checkbox">
+              <label class="container">
+                <input type="checkbox">
+                <span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="image-outer">
+              <img src="images/img/Allstate.svg" alt="">
+            </div>
+            <p class="bottom-title">Allstate</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!--  -->
+    <section class="reseller-affiliate py-5">
+      <div class="container">
+
         <div class="feature-grid">
           <div class="feature-item">
             <i class="fas fa-chart-line feature-icon"></i>
