--- a/affiliate-program.html
+++ b/affiliate-program.html
@@ -145,17 +145,6 @@
     </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
     <!--  -->
     <section class="reseller-affiliate py-5">
       <div class="container">
@@ -200,8 +189,90 @@
       </div>
     </section>
     <!--  -->
+    <!-- Get Started in 3 Simple Steps:  -->
+    <section class="why-tap">
+      <div class="container">
+        <div class="">
+          <h2 class="steps__title">Get Started in 3 Simple Steps:</h2>
 
+          <div class="steps__items">
+            <div class="steps__box">
+              <div class="steps__item">
+                <img src="images/img/steps__item1.svg" alt="" class="steps__item-image">
+                <span class="steps__item-note">step 1</span>
+                <p class="steps__item-title">Set up</p>
+                <div class="steps__item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                  reprehenderit esse ratione labore qui perspiciatis autem deleniti, doloremque sequi mollitia, dolore,
+                  delectus exercitationem? Saepe fugit amet voluptatibus nam soluta cupiditate!</div>
+              </div>
+            </div>
+            <div class="steps__box">
+              <div class="steps__item">
+                <img src="images/img/steps__item2.svg" alt="" class="steps__item-image">
+                <span class="steps__item-note">step 2</span>
+                <p class="steps__item-title">Set up</p>
+                <div class="steps__item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                  reprehenderit esse ratione labore qui perspiciatis autem deleniti, doloremque sequi mollitia, dolore,
+                  delectus exercitationem? Saepe fugit amet voluptatibus nam soluta cupiditate!</div>
+              </div>
+            </div>
+            <div class="steps__box">
+              <div class="steps__item">
+                <img src="images/img/steps__item1.svg" alt="" class="steps__item-image">
+                <span class="steps__item-note">step 3</span>
+                <p class="steps__item-title">Set up</p>
+                <div class="steps__item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                  reprehenderit esse ratione labore qui perspiciatis autem deleniti, doloremque sequi mollitia, dolore,
+                  delectus exercitationem? Saepe fugit amet voluptatibus nam soluta cupiditate!</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Get Started in 3 Simple Steps:  -->
+    <!-- How to start in 3 steps -->
+    <section class="instant-flow py-5">
+      <div class="container">
+        <div class="instant-flow-inner">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="instant-content">
+                <h4>Instant Flow</h4>
+                <h3>Launch your Stripe affiliate program with coupon code tracking</h3>
+                <ul class="lighter ">
+                  <li><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 17" class="text-success w-5">
+                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                        d="m3.333 8.357 3.334 3.333 6.666-6.667"></path>
+                    </svg>
+                    <p>Create Stripe coupons directly within the platform</p>
+                  </li>
+                  <li><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 17" class="text-success w-5">
+                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                        d="m3.333 8.357 3.334 3.333 6.666-6.667"></path>
+                    </svg>
+                    <p>Create Stripe coupons directly within the platform</p>
+                  </li>
+                  <li><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 17" class="text-success w-5">
+                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                        d="m3.333 8.357 3.334 3.333 6.666-6.667"></path>
+                    </svg>
+                    <p>Create Stripe coupons directly within the platform</p>
+                  </li>
+                </ul>
 
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="instant-img">
+                <img src="images/img/dash.svg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- How to start in 3 steps -->
 
 
 
