--- a/pricing.html
+++ b/pricing.html
@@ -70,6 +70,174 @@
     <!-- inner banner section -->
 
 
+
+    <section id="pricing" class="cs_section_shape_wrap_1 cs_gradient_bg_1 position-relative overflow-hidden">
+      <div class="cs_section_shape_1 position-absolute">
+        <img src="images/line-shape2.svg" alt="Shape">
+      </div>
+      <div class="cs_section_shape_2 position-absolute">
+        <img src="images/dot.svg" alt="Shape">
+      </div>
+      <div class="cs_height_66 cs_height_lg_75"></div>
+      <div class="container">
+        <div class="cs_section_heading cs_style_1 cs_style_1 text-center">
+          <p class="cs_section_subtitle cs_text_accent wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s" style="visibility: visible; animation-duration: 0.8s; animation-delay: 0.2s; animation-name: fadeInUp;">Our Pricing</p>
+          <h2 class="cs_section_title mb-0 wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" style="visibility: visible; animation-duration: 0.8s; animation-delay: 0.2s; animation-name: fadeIn;">Find the ideal pricing plan that perfectly  suits <br> your needs with  our transparent pricing options.</h2>
+        </div>
+        <div class="cs_height_85 cs_height_lg_60"></div>
+        <div class="row cs_gap_y_30 wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s" style="visibility: visible; animation-duration: 0.8s; animation-delay: 0.2s; animation-name: fadeIn;">
+          <div class="col-lg-4">
+            <div class="cs_pricing_table cs_style_1">
+              <div class="cs_pricing_head">
+                <div class="cs_pricing_icon">
+                  <img src="images/symbol.svg" alt="">
+                </div>
+                <div class="cs_pricing_head_text">
+                  <h3 class="cs_pricing_head_title">
+                    Starter
+                  </h3>
+                  <p class="cs_pricing_head_subtitle mb-0">For small business</p>
+                </div>
+              </div>
+              <div class="cs_pricing_seperator"></div>
+              <div class="cs_pricing_plan">
+                <h3 class="cs_price_value">$24 <small>/ month</small></h3>
+              </div>
+              <div class="cs_pricing_feature">
+                <ul class="cs_pricing_feature_list cs_mp0">
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Only for one user
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Inventory management
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Sells report &amp; anlysis
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-xmark"></i>
+                    Extreme functionality
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-xmark"></i>
+                    Bar code scanning
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-xmark"></i>
+                    Free 24/7 support
+                  </li>
+                </ul>
+                <a href="#contact" class="cs_pricing_btn cs_up_3_hover">Choose Plan</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="cs_pricing_table cs_style_1 active">
+              <div class="cs_pricing_head">
+                <div class="cs_pricing_icon">
+                  <img src="images/symbol1.svg" alt="">
+                </div>
+                <div class="cs_pricing_head_text">
+                  <h3 class="cs_pricing_head_title">
+                    Standard
+                  </h3>
+                  <p class="cs_pricing_head_subtitle mb-0">For professionals</p>
+                </div>
+              </div>
+              <div class="cs_pricing_seperator"></div>
+              <div class="cs_pricing_plan">
+                <h3 class="cs_price_value">$50 <small>/ month</small></h3>
+              </div>
+              <div class="cs_pricing_feature">
+                <ul class="cs_pricing_feature_list cs_mp0">
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Only for one user
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Inventory management
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Sells report &amp; anlysis
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Extreme functionality
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-xmark"></i>
+                    Bar code scanning
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-xmark"></i>
+                    Free 24/7 support
+                  </li>
+                </ul>
+                <a href="#contact" class="cs_pricing_btn cs_up_3_hover">Choose Plan</a>
+              </div>
+              <div class="cs_pricing_badge">Most Popular</div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="cs_pricing_table cs_style_1">
+              <div class="cs_pricing_head">
+                <div class="cs_pricing_icon">
+                  <img src="images/symbol3.svg" alt="">
+                </div>
+                <div class="cs_pricing_head_text">
+                  <h3 class="cs_pricing_head_title">
+                    Professional
+                  </h3>
+                  <p class="cs_pricing_head_subtitle mb-0">For enterprise level</p>
+                </div>
+              </div>
+              <div class="cs_pricing_seperator"></div>
+              <div class="cs_pricing_plan">
+                <h3 class="cs_price_value">$85 <small>/ month</small></h3>
+              </div>
+              <div class="cs_pricing_feature">
+                <ul class="cs_pricing_feature_list cs_mp0">
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Only for one user
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Inventory management
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Sells report &amp; anlysis
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Extreme functionality
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Bar code scanning
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check"></i>
+                    Free 24/7 support
+                  </li>
+                </ul>
+                <a href="#contact" class="cs_pricing_btn cs_up_3_hover">Choose Plan</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="cs_height_66 cs_height_lg_80"></div>
+    </section>
+
+
+
     <section class="pricing-sec py-5">
       <div class="container">
         <div class="sec-heading">
@@ -111,8 +279,7 @@
                 </div>
               </div>
             </form>
-       
-
+    
             <div class="note-div">
               <p>Each envelope is limited to 21 businesses. Only one business per industry is allowed.</p>
             </div>
