--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
     <section class="inner-bnr blog-bnr">
       <div class="container">
         <div class="inner-heading">
-          <h2>Blog</h2>
+          <h2>Blog R</h2>
         </div>
       </div>
     </section>
