--- a/ads.html
+++ b/ads.html
@@ -189,7 +189,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="cs_btn cs_bg_accent w-100 cs_dark_hover">Submit Ads</button>
+                    <button type="button" class="cs_btn cs_bg_accent cs_dark_hover">Submit Ads</button>
                 </div>
             </div>
         </div>
