--- a/ads.html
+++ b/ads.html
@@ -232,9 +232,14 @@
                                         <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
                                     </ul>
                                 </div>
-                                
+
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="ads-view-all">
+                        <a href="#" class="cs_btn cs_bg_accent cs_dark_hover">View More</a>
                     </div>
                 </div>
             </div>
