--- a/ads.html
+++ b/ads.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="fonts/sansation-font.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/animate.css">
+
+
     <!-- Custome CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-new.css">
@@ -77,12 +79,20 @@
                         <form class="ads-form">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <select class="form-select ads-form" required>
-                                        <option selected disabled>Availability by Industry</option>
-                                        <option>Real Estate</option>
-                                        <option>Cleaning Services</option>
-                                        <option>Dental &amp; Medical</option>
-                                    </select>
+                                    <div class="custom-select-wrapper">
+                                        <div class="custom-select-trigger">Availability by Industry 
+                                            <span class="select-icon"><i class="fa fa-chevron-down"></i></span>
+                                          </div>
+                                        <ul class="custom-options">
+                                            <li class="custom-option" data-value="Real Estate">Real Estate</li>
+                                            <li class="custom-option" data-value="Cleaning Services">Cleaning Services
+                                            </li>
+                                            <li class="custom-option" data-value="Dental & Medical">Dental & Medical
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <input type="hidden" name="industry" id="selected-industry" required>
+
                                 </div>
                                 <div class="col-md-4">
                                     <input type="text" class="form-control ads-form" placeholder="Enter ZIP Code"
@@ -184,15 +194,17 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="custom-footer">
+                            <button type="button" class="cs_btn cs_bg_accent cs_dark_hover">Submit Ads</button>
+                        </div>
+                    </form>
+                </div>
 
 
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="cs_btn cs_bg_accent cs_dark_hover">Submit Ads</button>
-                </div>
             </div>
         </div>
     </div>
+
 
     <!-- Modal -->
     <div class="modal fade detailed-blog" id="blogModal" tabindex="-1" role="dialog" aria-labelledby="blogModalLabel"
@@ -377,6 +389,35 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
     <script>
+
+        document.querySelectorAll('.custom-select-wrapper').forEach(wrapper => {
+            const trigger = wrapper.querySelector('.custom-select-trigger');
+            const options = wrapper.querySelectorAll('.custom-option');
+            const hiddenInput = document.getElementById('selected-industry');
+
+            trigger.addEventListener('click', () => {
+                wrapper.classList.toggle('open');
+            });
+
+            options.forEach(option => {
+                option.addEventListener('click', () => {
+                    const value = option.getAttribute('data-value');
+                    hiddenInput.value = value;
+                    wrapper.classList.remove('open');
+                    trigger.innerHTML = option.textContent + '<span class="select-icon"><i class="fa fa-chevron-down"></i></span>';
+                });
+            });
+
+            document.addEventListener('click', e => {
+                if (!wrapper.contains(e.target)) {
+                    wrapper.classList.remove('open');
+                }
+            });
+        });
+
+
+    </script>
+    <script>
         $(document).ready(function () {
             $('ul.tabs li').click(function () {
                 var tab_id = $(this).attr('data-tab');
@@ -393,6 +434,7 @@
             });
         });
     </script>
+
 
 </body>
 
