--- a/ads.html
+++ b/ads.html
@@ -194,7 +194,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="custom-footer">
+                        <div class="modal-custom-footer">
                             <button type="button" class="cs_btn cs_bg_accent cs_dark_hover">Submit Ads</button>
                         </div>
                     </form>
