--- a/ads.html
+++ b/ads.html
@@ -173,6 +173,15 @@
                             <label for="website-url">Company Website URL:</label>
                             <input type="url" id="website-url" name="website-url" placeholder="Company Website URL:">
                         </div>
+                        <div class="ads-modal-wraper">
+                            <label for="company">Company Address :</label>
+                            <input type="text" id="company" name="company" placeholder="Company Address :
+                            ">
+                        </div>
+                        <div class="ads-modal-wraper">
+                            <label for="Phone">Phone Number:</label>
+                            <input type="text" id="Phone" name="Phone" placeholder="Phone Number:">
+                        </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="custom-select-wrapper">
