--- a/ads.html
+++ b/ads.html
@@ -43,7 +43,7 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="how-it-works.html">How It Works</a></li>
                                 <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="blog.html" class="active">Blog</a></li>
+                                <li><a href="blog.html" class="">Blog</a></li>
                                 <li><a href="#">Affiliate Program</a>
                                 <li><a href="contact.html">Contact us</a></li>
                             </ul>
