--- a/how-it-works-2.html
+++ b/how-it-works-2.html
@@ -137,50 +137,49 @@
 
                 <div class="timeline">
                     <div class="container left">
-                      <div class="step-number">1</div>
-                      <div class="step-card">
-                        <h3>Pick Your ZIP Code</h3>
-                        <p>View available ZIP codes and select your area of coverage.</p>
-                      </div>
+                        <div class="step-number">1</div>
+                        <div class="step-card">
+                            <h3>Pick Your ZIP Code</h3>
+                            <p>View available ZIP codes and select your area of coverage.</p>
+                        </div>
                     </div>
                     <div class="container right">
-                      <div class="step-number">2</div>
-                      <div class="step-card">
-                        <h3> Industry Exclusivity</h3>
-                        <p>Only one business per industry is allowed per ZIP code—yours.</p>
-                      </div>
+                        <div class="step-number">2</div>
+                        <div class="step-card">
+                            <h3> Industry Exclusivity</h3>
+                            <p>Only one business per industry is allowed per ZIP code—yours.</p>
+                        </div>
                     </div>
                     <div class="container left">
-                      <div class="step-number">3</div>
-                      <div class="step-card">
-                        <h3> Design Your Ad</h3>
-                        <p>Work with our in-house team or submit your own print-ready design.
-                        </p>
-                      </div>
+                        <div class="step-number">3</div>
+                        <div class="step-card">
+                            <h3> Design Your Ad</h3>
+                            <p>Work with our in-house team or submit your own print-ready design.
+                            </p>
+                        </div>
                     </div>
                     <div class="container right">
-                      <div class="step-number">4</div>
-                      <div class="step-card">
-                        <h3>Trackable Engagement</h3>
-                        <p>We provide a QR code and dedicated call tracking number to measure results.
-                        </p>
-                      </div>
+                        <div class="step-number">4</div>
+                        <div class="step-card">
+                            <h3>Trackable Engagement</h3>
+                            <p>We provide a QR code and dedicated call tracking number to measure results.
+                            </p>
+                        </div>
                     </div>
                     <div class="container left">
-                      <div class="step-number">5</div>
-                      <div class="step-card">
-                        <h3>Get Delivered Monthly</h3>
-                        <p>Your ad is sent in our bold, full-color envelope to 5,000+ homes.
-                        </p>
-                      </div>
+                        <div class="step-number">5</div>
+                        <div class="step-card">
+                            <h3>Get Delivered Monthly</h3>
+                            <p>Your ad is sent in our bold, full-color envelope to 5,000+ homes.
+                            </p>
+                        </div>
                     </div>
-                  </div>
-
-
-
-
-
-
+                </div>
+                <div class="reverse-btn">
+                    <a href="#" class="cs_btn">Explore ZIP Codes Now</a>
+                    <span>or</span>
+                    <a href="#" class="cs_btn"> Get Started</a>
+                </div>
             </div>
         </section>
 
